<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">麦飞机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- bootom -->
    <string name="first_page">首页</string>
    <string name="quiz">考试</string>
    <string name="mine">我的</string>
    <string name="filight_school">航校</string>
    <string name="plane_garage">机库</string>
    <string name="pressed_again_to_quit">再按一次将退出</string>
    
    <string name="th_school">通航学校</string>
   
    <!-- error message -->
    <string name="network_io_error">"网络不给力啊"</string>
    <string name="request_timeout">请求超时</string>
    <string name="server_error">服务器发生未知异常</string>
    
    
    <!-- login pages -->
    <string name="user_name_input_hint">用户名/邮箱/手机号</string>
    <string name="user_pass_input_hint">输入密码</string>
    <string name="login_use_weixin">微信登录</string>
    <string name="login_use_weibo">微博登录</string>
    <string name="login_txt">登录</string>
    <string name="passwd_forget">忘记密码？</string>
    <string name="want_regist">我要注册</string>
    <string name="third_part_input">第三方登陆</string>
    <string name="user_login">用户登录</string>
    <string name="name_pass_fail">用户名或者密码错误</string>
    <string name="login_tip_str">正在登录  ...</string>
    <string name="name_empty_tip">用户名忘记输入了</string>
    <string name="invalide_number">无效手机号码</string>
    <string name="bind_success_ok">绑定成功</string>
    
    <!-- first pages  -->
    <string name="xy_plane">旋翼航空器</string>
    <string name="gdy_plane">固定翼航空器</string>
    <string name="general_school">通航学校</string>
    <string name="jxk_plane">机型库</string>
    <string name="fx_zl">发现之旅</string>
    <string name="user_name_defautl">飞行学员</string>
    
    <!-- 考试页面 -->
    <string name="ks_privious">上一题</string>
    <string name="ks_next">下一题</string>
    <string name="ks_weizuo">未做</string>
    <string name="ks_jiaojuan">交卷</string>
    <string name="ks_djs">考试倒计时</string>
    <string name="ks_djs_time">02:00:00</string>
    <string name="download_kt_tip">正在下载考题  ...\n考题下载后，考试立刻开始！</string>
    <string name="no_kt">您选择的考题不存在！</string>
    <string name="jiao_queren">您确认要交卷吗？</string>
    <string name="tuichu_ks">考试时间尚未结束,您还有未答题。\n请点击“退出”放弃本次考试。</string>
    <string name="tuichu_wc_ks">您已经答完所有题目，但考试时间尚未结束。\n请点击“退出”放弃本次考试。</string>
    <string name="jq_dw">您已经答完所有题目。确认要交卷吗？</string>
     <string name="jq_wdw">您尚有题目未答。确认要交卷吗？</string>
    <string name="quiz_timeout">考试时间已用完。、\r\n请点击"确认"交卷,\r\n点击"取消"表示您放弃这次考试!</string>
    <string name="yes">确定</string>
    <string name="no_weizuo_ti">所有题目都已经做完</string>
    <string name="commit_quiz_dlg_info">正在提交考试结果  ...</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_fail">提交失败</string>
    
    <!-- 绑定手机号码 -->
    <string name="phone_number">手机号:</string>
    <string name="phone_number_input_tip">请输入11位手机号码</string>
    <string name="check_code">验证码:</string>
    <string name="code_check">获取验证码</string>
    <string name="input_6_check">请输入6位验证码</string>
    <string name="get_check_code">请先获取验证码</string>
    <string name="phone_number_bind">绑定</string>
    <string name="bind_phone_title">绑定手机号码</string>
    <string name="second">%1$d 秒</string>
    <string name="get_code_fail">获取验证码失败</string>
    <string name="check_code_fail">取验证码错误</string>
    
    <!-- 用户注册 -->
    <string name="user_regist_str">用户名:</string>
    <string name="email_str">邮\t箱:</string>
    <string name="passwd_str">密\t 码:</string>
    <string name="user_regist_et_hint">请输入6~15个字符</string>
    <string name="email_hint">请输入一个常用邮箱地址</string>
    <string name="passwd_hint">请输入6~20位密码</string>
    <string name="agreen_prot">同意麦飞机注册会员协议</string>
    <string name="regist_str">立即注册</string>
    <string name="user_regist">用户注册</string> 
    <string name="user_name_too_short">用户名不能为空</string>
    <string name="email_illegal">邮箱地址有点问题哦</string>
    <string name="passwd_too_short">密码太短了</string>
    <string name="regist_success">注册成功</string>
    <string name="name_exeist">用户名已经存在</string>
    <string name="please_check_mfj_prot"> 请同意麦飞机会员协议</string>
    
    <!-- 用户忘记密码 -->
    <string name="forgot_passwd">忘记密码</string>
    <string name="regist_email_input_hint">请输入注册时填写的邮箱</string>
    <string name="commit_email">提交</string>
    
    <!-- 麦飞机模拟考试系统 1-->
    <string name="quiz_title">麦飞机模拟考试系统</string>
    <string name="sz_quiz_sytem">私照模拟考试系统</string>
    <string name="bz_quiz_sytem">商照模拟考试系统</string>
    
     <!-- 麦飞机模拟考试系统 2-->
     <string name="quiz_biaoz">考试标准: 80题  ，		120分钟 </string>
     <string name="quiz_jg_biaoz">合格标准: 满分100分 ，	90及格 </string>
     <string name="moni_quiz">模拟考试</string>
     <string name="xiankaoweizuo_quiz">先考未做</string>
     <string name="moni_quiz_e">模拟考试: 根据比列抽取80道题</string>
     <string name="xiankaoweizuo_quiz_e">先考未做: 优先考未做过的题，不错过每道题</string>
     <string name="mnks_title">私用航空器(%1$s)考试系统</string>
     <string name="zsj_ks">直升机</string>
     <string name="gdy_ks">固定翼</string>
     
     <!-- 个人中心 -->
     <string name="user_my_center">我的个人中心</string>
     <string name="user_zhuye">个人主页</string>
     <string name="user_name_str">用户名</string>
     <string name="user_email_str">邮箱</string>
     <string name="user_sex_str">性别</string>
     <string name="user_area_str">地区</string>
     <string name="user_tel_str">手机</string>
     
     <string name="user_zhcj_str">最好成绩</string>
     <string name="user_wdjd_str">我的订单</string>
     <string name="user_aq_set_str">修改密码</string>
     <string name="user_notice_str">我的通知</string>
     <string name="user_about_us">关于我们</string>
     <string name="user_login_out">注销当前用户</string>
     <string name="male">男</string>
     <string name="female">女</string>
     
     <!-- 考试结果页面 -->
     <string name="ks_result_title">考试结果</string>
     <string name="ks_exit">退出</string>
     <string name="result_shared">分享一下</string>
     <string name="ks_result_info_fail">%1$s:\n您的飞行梦想折断了双翼，\n请继续努力！ \n \n 
                                                                        成绩:  %2$.2f 分  \n 
                                                                        用时:  %3$d 分    %4$d 秒  \n </string>
                                                                        
     <string name="ks_result_info_sccess">%1$s:\n 恭喜，您的飞行梦想打败了现实！ \n \n 
                                                                        成绩:  %2$.2f 分  \n 
                                                                        用时:  %3$d 分    %4$d 秒  \n </string>
                                                                        
     
     <!-- 查看答案 -->
     <string name="check_result_title">查看答案</string>
     
      <!-- 试题答案 -->
     <string name="shiti_an_title">试题答案</string>
     <string name="user_id_info">学生序号: %1$s</string>
     <string name="user_name_info">学生姓名: %1$s</string>
     
     <!-- 通航学校 -->
     <string name="thxx_title">通航学校</string>
     
     <!-- 发现之旅 -->
      <string name="fxzl_title">发现之旅</string>
      <string name="product_default_info">麦飞吉APP全球下载量突破10万</string>
      
     <!-- 通航学校   详情-->
     <string name="conn_us">联系我们</string>
     <string name="coment_count">%1$d评论</string>
      
     <!--发现之旅  详情 -->
     <string name="order_product">立即订购</string>
     <string name="money_number">￥ %1$s</string>
     
     <!-- 排行榜页面 -->
     <string name="phb_title">排行榜</string>
     <string name="my_pm">我的排名: 目前您排在第 %1$d 位</string>
     <string name="score_str">%1$.1f分</string>
     <string name="score_str_phb">%1$.1f分    查看排行榜</string>
     
     <!-- 关于页面 -->
     <string name="about_us">关于我们</string>
     <string name="about_us_info">麦飞机 版本%1$s\n\n
         麦飞机是一家集飞行体验、飞行旅游、飞行培训及\n\n
         飞机租售的一体化信息平台。
         </string>
         
     <!-- 我的通知 -->
     <string name="my_notice">我的通知</string>
     <string name="notice_empty">您暂时没有通知\n您可以手指向下划屏再次刷新</string>
     <!-- 我的订单 -->
     <string name="my_order">我的订单</string>
     <string name="order_empty">您暂时没有订单\n您可以手指向下划屏再次刷新</string>
     <string name="ddh_str">订单号:%1$s</string>
     <string name="dgtip_str">感谢您订购了%1$s</string>
   
     <!-- 修改密码  -->
     <string name="change_passwd_title">修改密码</string>
     <string name="old_passwd">原密码</string>
     <string name="new_passwd">新密码</string>
     <string name="input_old_passwd_hint">请输入原密码</string>
     <string name="chang_passwd">确认修改</string>
     <string name="old_passwd_wrong_tip">原密码错误</string>
     <string name="change_success">密码修改成功,请重新登录</string>
     
     
     <!-- 城市选择 -->
     <string name="select_city_title">请选择您所在城市</string>
        
     
    <!-- 评论页面 -->
    <string name="send">发送</string>
    <string name="empty_comment">不能发送空的评论</string>
    <string name="no_login_comment">只有登录用户才能评论</string>
    
    <!-- load more layout -->
    <string name="more_items">正在载入更多 ...</string>
     
</resources>
