<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/sy"
        style="@style/bottom_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:drawableTop="@drawable/ks_previous"
        android:gravity="center"
        android:text="@string/ks_privious" />

    <TextView
        android:id="@+id/ks"
        style="@style/bottom_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:drawableTop="@drawable/ks_weizuo"
        android:gravity="center"
        android:text="@string/ks_weizuo" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/ks_djd_time"
            style="@style/bottom_text_style"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ks_djs_time" />

        <TextView
            android:id="@+id/ks_djd"
            style="@style/bottom_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/ks_djs" />
    </RelativeLayout>

    <TextView
        android:id="@+id/hx"
        style="@style/bottom_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:drawableTop="@drawable/ks_jiaojuan"
        android:gravity="center"
        android:text="@string/ks_jiaojuan" />

    <TextView
        android:id="@+id/jk"
        style="@style/bottom_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="-8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:drawableTop="@drawable/ks_next"
        android:gravity="center"
        android:text="@string/ks_next" />

</LinearLayout>