<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:gravity="center_horizontal" >

    <include
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/top" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/user_regist_str"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/pt_17" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_tv"
            android:layout_marginTop="40dp"
            android:text="@string/email_str"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/pt_17" />

        <TextView
            android:id="@+id/passswd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_tv"
            android:layout_marginTop="40dp"
            android:text="@string/passwd_str"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/pt_17" />

        <EditText
            android:id="@+id/user_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/user_name_tv"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/user_name_tv"
            android:background="@drawable/zc_edit_bg_0"
            android:hint="@string/user_regist_et_hint"
            android:inputType="text"
            android:maxLength="15"
            android:textColor="@color/white"
            android:textSize="@dimen/pt_17" >
        </EditText>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/email_tv"
            android:layout_alignLeft="@+id/user_name_et"
            android:layout_toRightOf="@+id/email_tv"
            android:background="@drawable/zc_edit_bg_0"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="@dimen/pt_17" />

        <EditText
            android:id="@+id/passwd_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/passswd_tv"
            android:layout_alignLeft="@+id/user_name_et"
            android:layout_toRightOf="@+id/passswd_tv"
            android:background="@drawable/zc_edit_bg_0"
            android:hint="@string/passwd_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textSize="@dimen/pt_17" />

        <LinearLayout
            android:id="@+id/agree_check_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passswd_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/agree_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/agree_check_selector"
                android:layout_gravity="center_vertical" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreen_prot"
                android:textColor="@color/gray_white"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/pt_17" />
        </LinearLayout>

        <Button
            android:id="@+id/regist_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/agree_check_con"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/lj_zc_0"
            android:text="@string/regist_str"
            android:textColor="@color/white_deep_gray"
            android:textSize="@dimen/pt_17" />
    </RelativeLayout>

</RelativeLayout>