<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:paddingBottom="20dp"
    >

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/phone_number"
        android:textColor="@color/gray_white"
        android:textSize="@dimen/pt_16" />

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone_number_tv"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/phone_number_tv"
        android:background="@drawable/ph_num_ed_bg"
        android:inputType="phone" 
        android:textSize="@dimen/pt_16"
        android:textColor="@color/white"
        android:textColorHint="@color/cyan"
        android:hint="@string/phone_number_input_tip"/>

    <TextView
        android:id="@+id/check_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_tv"
        android:layout_marginTop="30dp"
        android:text="@string/check_code"
        android:textColor="@color/gray_white"
        android:textSize="@dimen/pt_16" />

    <EditText
        android:id="@+id/check_code_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/check_code_tv"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/phone_number_tv"
        android:background="@drawable/check_code_et_bg"
        android:inputType="text"
        android:textSize="@dimen/pt_16"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/code_check_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/check_code_tv"
        android:layout_alignRight="@+id/phone_number_et"
        android:background="@drawable/get_check_code"
        android:text="@string/code_check"
        android:textColor="@color/white"
        android:textSize="@dimen/pt_17" />

     <Button
         android:id="@+id/phone_number_bind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/check_code_tv"
         android:background="@drawable/ph_bd_bt_bg"
         android:text="@string/phone_number_bind"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:textColor="@color/white"
         android:textSize="@dimen/pt_17" />

</RelativeLayout>