<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:paddingBottom="20dp" >

    <include
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/top" />

    <com.fly.ui.view.ElasticScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_view"
        android:layout_centerHorizontal="true"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/mid_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/old_passwd"
                android:textColor="@color/gray_white"
                android:textSize="@dimen/pt_16" />

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/phone_number_tv"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/phone_number_tv"
                android:background="@drawable/login_input_selector"
                android:hint="@string/input_old_passwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/pt_16" >
            </EditText>

            <TextView
                android:id="@+id/check_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number_tv"
                android:layout_marginTop="30dp"
                android:text="@string/new_passwd"
                android:textColor="@color/gray_white"
                android:textSize="@dimen/pt_16" />

            <EditText
                android:id="@+id/check_code_ed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/check_code_tv"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/phone_number_tv"
                android:background="@drawable/login_input_selector"
                android:hint="@string/passwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/pt_16" />

            <Button
                android:id="@+id/phone_number_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check_code_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/start_tp_bg"
                android:text="@string/chang_passwd"
                android:textColor="@color/white"
                android:textSize="@dimen/pt_17" />
        </RelativeLayout>
    </com.fly.ui.view.ElasticScrollView>

</RelativeLayout>